--- a/assets/css/bkash.css
+++ b/assets/css/bkash.css
@@ -6,7 +6,7 @@
     background-color: #ffffffc2;
     left: 0;
     top: 0;
-    background-image: url('../images/bkash.gif');
+    background-image: url('https://res.cloudinary.com/d-coders/image/upload/v1592201998/wp-plugins/bkash.gif');
     background-position: center;
     background-repeat: no-repeat;
     display: none;
